Running Docker containers on Azure/4-aks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rome-api-service
spec:
  ports:
    - port: 80
  selector:
    app: backend
  type: ClusterIP
