Running Docker containers on Azure/4-aks/ingress.clean.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rome-api-http-ingress-clean  
  annotations:        
    kubernetes.io/ingress.class: nginx  
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"  
spec:
  rules:  
  - host: projectrome.cf
    http:
      paths:
      -  backend:
          serviceName: rome-api-service
          servicePort: 80
